# fruit-manager

./: .gitignore  LICENSE  README.md  app.py  fastapi.py  fruit-manager.py  fruit_manager.py  inventaire.json  main.py  models.py  notebook.ipynb  pyproject.toml  requirements.txt  run.py
.devcontainer/: devcontainer.json
data/: database.db  inventaire.db  list_fruits.json  seasons_fruits_legs.json  tresorerie.txt
my_package/: models.py  module_sql.py  schemas.py
pages/: 1_tresorerie.py
src/api/: main.py
src/core/: database.py  fruit_manager.py  treasure.py
src/scraping/: fruits_legumes_season.py
src/ui/: acceuil.py  accueil.py  app.py
src/ui/pages/: 1_tresorerie.py  2_saisonnalite.py
