[project]
name = "fruit-manager"
version = "0.1.0"
description = ""

authors = [
    {name = "Guillaume",email = "guippon@gmail.com"}
]



readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "plotly (>=6.3.0,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "nbformat (>=4.2.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "html5lib (>=1.1,<2.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.1,<0.26.0)",
    "streamlit-image-select (>=0.6.0,<0.7.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]
[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
